# disaster-rag-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  main.py  new-prompt.md  pyproject.toml
.cache/documents/0c4637756f64a9d6/: chunks.json  metadata.json  parsed.md
.cache/documents/0d35c8f9b3a6d62d/: chunks.json  metadata.json  parsed.md
.cache/documents/17105c7f53ab5a96/: chunks.json  metadata.json  parsed.md
.cache/documents/2856238f275739ab/: chunks.json  metadata.json  parsed.md
.cache/documents/2dc6730886b4f290/: chunks.json  metadata.json  parsed.md
.cache/documents/3236652e345b942f/: chunks.json  metadata.json  parsed.md
.cache/documents/425fbcfa832f26b4/: chunks.json  metadata.json  parsed.md
.cache/documents/4f731a2c3498f4c3/: chunks.json  metadata.json  parsed.md
.cache/documents/532dd659b9318ed6/: chunks.json  metadata.json  (+1 more)
.db/chroma/: chroma.sqlite3
.github/workflows/: code-lint.yml  pr-lint.yml  release-please.yml  tests.yml
.streamlit/: secrets.toml.SAMPLE
docs/: chunking-branch-status.md  ingestion-improvement-plan.md  metadata-extraction-plan.md  requirements.md
examples/: langfuse_observability_example.md  test_cache.py  test_chunker.py
src/core/: __init__.py  logging_config.py
src/repositories/: document_cache.py
src/retrieval/: document.py
src/services/: context_formatter.py  document_chunker.py  metadata_extractor.py
src/ui/: chatbot.py  settings.py
tests/repositories/: test_document_cache.py
tests/retrieval/: test_document.py  test_document_integration.py
tests/services/: test_context_formatter.py  test_document_chunker.py  test_metadata_extractor.py
tests/ui/: test_chatbot_filtering.py  test_duplicate_prevention.py  test_xml_context_integration.py
(+52 files in other folders)
