[project]
name = "disaster-rag-assistant"
version = "0.1.0"
description = "An intelligent virtual assistant using RAG (Retrieval-Augmented Generation) architecture to provide personalized, contextual guidance for natural disaster response. Serves victims, residents, and families with real-time safety information, evacuation procedures, and emergency resources in Portuguese."
readme = "README.md"
authors = [
    { name = "Santiago Bernardes", email = "santiagobernardes@gmail.com" }
]
requires-python = ">=3.13.3"
dependencies = [
    "langfuse>=2.60.7",
    "openai>=1.82.1",
    "streamlit>=1.45.1",
]
