[project]
name = "disaster-rag-assistant"
version = "1.0.0"
description = "An intelligent virtual assistant using RAG (Retrieval-Augmented Generation) architecture to provide personalized, contextual guidance for natural disaster response. Serves victims, residents, and families with real-time safety information, evacuation procedures, and emergency resources in Portuguese."
readme = "README.md"
authors = [
    { name = "Santiago Bernardes", email = "santiagobernardes@gmail.com" }
]
requires-python = ">=3.13.3"
dependencies = [
    "chromadb>=1.0.11",
    "langfuse>=2.60.7",
    "llama-cloud-services>=0.6.25",
    "openai>=1.82.1",
    "pysqlite3-binary>=0.5.4",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
